[tool.poetry]
name = "scikit-psl"
version = "0.6.2"
description = "Probabilistic Scoring List classifier"
license = "MIT"
authors = ["Stefan Heid <stefan.heid@upb.de>", "Jonas Hanselle <jonas.hanselle@ifi.lmu.de>"]
readme = ["README.md", "CHANGELOG.md"]
repository = "https://github.com/trr318/scikit-psl"
packages = [{ include = "skpsl" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
scipy = "^1.11.2"
joblib = "^1.3.2"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.5"
sphinx_rtd_theme = "^1.3"
sortedcontainers = "^2.4.0"
black = "^23.11.0"

pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
