[tool.poetry]
name = "scikit-psl"
version = "0.7.2"
description = "Probabilistic Scoring List classifier"
license = "MIT"
authors = ["Stefan Heid <stefan.heid@upb.de>", "Jonas Hanselle <jonas.hanselle@ifi.lmu.de>"]
readme = ["README.md", "CHANGELOG.md"]
repository = "https://github.com/trr318/scikit-psl"
packages = [{ include = "skpsl" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.5.2"
numpy = "^1.26.4"
scipy = "^1.14.1"
joblib = "^1.4.2"
pandas = "^2.2.3"
sortedcontainers = "^2.4.0"
pygad = "^3.3.1"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.5"
sphinx_rtd_theme = "^1.3"
black = "^23.11.0"
swig = "^4.2.1.post0"
smac = "^2.2.0"

pytest = "^7.4"
ipykernel = "^6.29.5"


[tool.poetry.group.extra.dependencies]
seaborn = "^0.13.2"
tqdm = "^4.67.1"


[tool.poetry.group.experiments.dependencies]
networkx = "^3.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
